# weston

./: .gitlab-ci.yml  CONTRIBUTING.md  Makefile.am  README.md  meson.build  meson_options.txt
.gitlab-ci/: build-deps.sh  debian-install.sh  leak-sanitizer.supp
clients/: constraints.c  content_protection.c  desktop-shell.c  editor.c  eventdemo.c  fullscreen.c  image.c  ivi-shell-user-interface.c  keyboard.c  meson.build  multi-resource.c  presentation-shm.c  rotator.c  screenshot.c  simple-damage.c  simple-egl.c  simple-im.c  simple-shm.c  simple-touch.c  stacking.c  terminal.c  touch-calibrator.c  weston_verify_writeback_connector.c  window.c  window.h
compositor/: main.c  meson.build  screen-share.c  text-backend.c  weston-rotator.c  weston-screenshooter.c  weston.h  xwayland.c
data/: COPYING  Loading...  meson.build
desktop-shell/: input-panel.c  meson.build  shell.c  shell.h
doc/sphinx/: doxygen.ini.in
doc/sphinx/toc/: libweston.rst  test-suite.rst
doc/sphinx/toc/libweston/: desktop.rst  meson.build  views-mgmt.rst
doc/sphinx/toc/libweston/images/: libweston-desktop-view-creation.msc  meson.build
doc/systemd/: README.md  weston@.service  weston@.socket
frontend/: cms-colord.c  config-helpers.c  main.c  meson.build  screen-share.c  weston-private.h
fullscreen-shell/: fullscreen-shell.c
include/: meson.build
include/libweston/: backend-drm.h  backend-transmitter.h  desktop.h  libweston.h  matrix.h  meson.build  transform.h  weston-assert.h  weston-log.h  xwayland-api.h
include/libweston-desktop/: libweston-desktop.h
ivi-shell/: hmi-controller.c  ivi-layout-export.h  ivi-layout-private.h  ivi-layout.c  ivi-shell.c  lua-controller.c  lua-controller.h  lua-controller.i  lua-controller.ini.in  meson.build  script.lua  weston.ini.in
kiosk-shell/: kiosk-shell.c  kiosk-shell.h  meson.build
libweston/: animation.c  app-info.c  app-info.h  backend.h  clipboard.c  color-management.c  color-noop.c  color-profile-param-builder.c  color-properties.c  color-properties.h  color-representation.c  color-representation.h  color.c  color.h  compositor-drm.c  compositor-drm.h  compositor.c  compositor.h  content-protection.c  data-device.c  enums.c  gl-renderer.c  id-number-allocator.c  input.c  launcher-direct.c  launcher-libseat.c  launcher-logind.c  launcher-weston-launch.c  libinput-device.c  libinput-device.h  libinput-seat.c  libweston-internal.h  linux-dmabuf.c  linux-explicit-synchronization.c  linux-sync-file-uapi.h  linux-sync-file.c  linux-sync-file.h  meson.build  noop-renderer.c  output-capture.c  (+13 more)
libweston-desktop/: client.c  meson.build  seat.c  surface.c  xdg-shell.c
libweston/backend-drm/: drm-gbm.c  drm-internal.h  drm-virtual.c  drm.c  fb.c  kms.c  libbacklight.c  meson.build  modes.c  state-propose.c
libweston/backend-fbdev/: fbdev.c  meson.build
libweston/backend-headless/: headless-internal.h  headless.c  meson.build
libweston/backend-pipewire/: pipewire.c
libweston/backend-rdp/: meson.build  rdp.c  rdp.h
libweston/backend-transmitter/: meson.build  transmitter-fb.c  transmitter-input.c  transmitter-internal.h  transmitter.c
libweston/backend-vnc/: vnc.c
libweston/backend-wayland/: meson.build  wayland.c
libweston/backend-x11/: meson.build  x11.c
libweston/color-lcms/: color-lcms.c  color-lcms.h  color-profile.c  color-transform.c
libweston/desktop/: libweston-desktop.c  surface.c  xdg-shell.c
libweston/renderer-etna/: common.xml.h  etna-renderer.c  etna-renderer.h  meson.build  state_2d.xml.h
libweston/renderer-gl/: egl-glue.c  fragment.glsl  gl-renderer-internal.h  gl-renderer-private.h  gl-renderer.c  gl-renderer.h  gl-shader-config-color-transformation.c  gl-shaders.c  gl-utils.c  meson.build
libweston/renderer-waltham/: meson.build  waltham-renderer.c  waltham-renderer.h
man/: meson.build  weston-bindings.man  weston-drm.man  weston.ini.man  weston.man
pipewire/: meson.build
protocol/: ivi-hmi-controller.xml  meson.build  weston-clock.xml  weston-content-protection.xml  weston-rotator.xml  weston-test.xml  weston-touch-calibration.xml  xdg-session-management.xml
shared/: cairo-util.c  cairo-util.h  crt-compatibility.h  file-util.c  frame.c  image-loader.c  matrix.c  meson.build  os-compatibility.c  os-compatibility.h  timespec-util.h  transform.c  weston-assert.h  weston-egl-ext.h  xalloc.h  xcb-xwayland.c  xcb-xwayland.h
tests/: alpha-blending-test.c  assert-test.c  bad-buffer-test.c  buffer-transforms-test.c  color-icc-output-test.c  color-management-parametric-test.c  color-management-test.c  color-metadata-errors-test.c  config-parser-test.c  custom-env-test.c  devices-test.c  drm-composite-bypass-test.c  drm-writeback-screenshot-test.c  event-test.c  internal-screenshot-test.c  invalid-buffer-size-test.c  ivi-layout-internal-test.c  ivi-layout-test-client.c  keyboard-test.c  linux-explicit-synchronization-test.c  matrix-test.c  matrix-transform-test.c  meson.build  output-capture-protocol-test.c  output-damage-test.c  output-decorations-test.c  output-transforms-test.c  pointer-shot-test.c  pointer-test.c  presentation-test.c  safe-signal-output-removal-test.c  shm-buffer-test.c  single-pixel-buffer-test.c  subsurface-shot-test.c  surface-screenshot-test.c  text-test.c  timespec-test.c  touch-test.c  viewporter-shot-test.c  viewporter-test.c  (+17 more)
tools/zunitc/src/: zunitc_impl.c
xwayland/: launcher.c  meson.build  selection.c  window-manager.c  xwayland.h
